--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8">
         <title>Styles Conference</title>
+        <link rel="stylesheet" href="assets/stylesheets/main.css">
     </head>
     <body>
-     
-         <h1>Styles Conference</h1>
-         <p>Every year the brightest web design</p>
-
+        <h1>Styles Conference</h1>
+        <p>Every year the brighest web design</p>
+      </body>
 </html>
