--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="assets/stylesheets/main.css">
     </head>
     <body>
-        <h1>Styles Conference</h1>
+        <p>Styles Conference</p>
         <p>Every year the brighest web design</p>
       </body>
 </html>
