--- a/index.html
+++ b/index.html
@@ -6,7 +6,37 @@
         <link rel="stylesheet" href="assets/stylesheets/main.css">
     </head>
     <body>
-        <p>Styles Conference</p>
-        <p>Every year the brighest web design</p>
-      </body>
+        <header>
+            <h1>
+                <a href="index.html">Styles Conference</a>
+            </h1>
+            <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
+        </header>
+
+        <section>
+            <h2>Dedicated to the Craft of Building Websites</h2>
+            <p>Every year the brightest web designers and front-end developers descend on Chicago to discuss the latest technologies. Join us this August!</p>
+        </section>
+                
+        <section>
+
+            <section>
+                <h5>Speakers</h5>
+                <h3>World-Class Speakers</h3>
+                <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
+            </section>
+            <section>
+                <h5>Three inspiring days</h5>
+                <h3>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times.</h3>
+                <p>venue</p>
+            </section>
+            <section>
+                <h5>The Chicago Theatre</h5>
+                <h3>Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful confernce venue.</h3>
+                <p>@Styles Confernce</p>
+            </section>
+
+
+        </section>
+    </body>
 </html>
