--- a/speakers.html
+++ b/speakers.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Styles Conference</title>
-        <link rel="stylesheet" href="assets/stylesheets/main.css">
+        <link rel="stylesheet" href="assets/stylesheets/main.cs">
     </head>
     <body>
         <header>
@@ -20,3 +20,13 @@
           </nav>
     
         </header>
+        <footer>
+          <small>&copy; Styles Conference</small>
+           <nav>
+            <a href="index.html">Home</a>
+            <a href="speakers.html">Speakers</a>
+            <a href="schedule.html">Schedule</a>
+            <a href="venue.html">Venue</a>
+            <a href="register.html">Register</a>
+          </nav>
+        </footer>
