--- a/speakers.html
+++ b/speakers.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8">
         <title>Styles Conference</title>
-        <link rel="stylesheet" href="assets/stylesheets/main.cs">
+        <link rel="stylesheet" href="assets/stylesheets/main.css">
     </head>
     <body>
-        <header>
+        <header class="conatiner">
             <h1>
                 <a href="index.html">Styles Conference</a>
             </h1>
