--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
     </head>
     <body>
         <header class="container">
-            <section class="container"
+            <section class="container">
                 <h1>
                     <a href="index.html">Styles Conference</a>
                 </h1>
             </section>
-            </header>
             <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
             <nav>
                 <a href="index.html">Home</a>
@@ -24,7 +23,7 @@
     
         </header>
 
-        <section class="container">
+        <section class="hero container">
             <h2>Dedicated to the Craft of Building Websites</h2>
             <p>Every year the brightest web designers and front-end developers descend on Chicago to discuss the latest technologies. Join us this August!</p>
             <section>
