--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
         <link rel="stylesheet" href="assets/stylesheets/main.css">
     </head>
     <body>
-        <header class="container">
-            <section class="container">
-                <h1>
-                    <a href="index.html">Styles Conference</a>
+        <header class="container group">
+                <h1 class="logo">
+                    <a href="index.html">Styles <br> Conference</a>
                 </h1>
             </section>
             <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
@@ -52,7 +51,7 @@
 
 
         </section>
-        <footer class="container">
+        <footer class="primary-footer container group">
           <small>&copy; Styles Conference</small>
            <nav>
             <a href="index.html">Home</a>
