--- a/schedule.html
+++ b/schedule.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8">
     <title>Schedule - Styles Conference</title>
     <link rel="stylesheet" href="assets/stylesheets/main.css">
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
   </head>
 
   <body>
@@ -30,16 +29,13 @@
 
     </header>
 
-    <!-- Lead -->
+    <!-- Main content -->
 
     <section class="row-alt">
       <div class="lead container">
 
-        <h1>Schedule</h1>
+      <h1>Schedule</h1>
 
-        <p>The conference opens with amazing workshops and continues with two days of incredible talks and keynotes, all of which are facilitated by industry-leading experts.</p>
-
-      </div>
     </section>
 
     <!-- Footer -->
@@ -48,7 +44,7 @@
 
       <small>&copy; Styles Conference</small>
 
-      <nav class="nav">
+      <nav>
         <a href="index.html">Home</a>
         <a href="speakers.html">Speakers</a>
         <a href="schedule.html">Schedule</a>
