--- a/venue.html
+++ b/venue.html
@@ -5,14 +5,13 @@
     <meta charset="utf-8">
     <title>Venue - Styles Conference</title>
     <link rel="stylesheet" href="assets/stylesheets/main.css">
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
   </head>
 
   <body>
 
     <!-- Header -->
 
-    <header class="primary-header container group">
+<header class="primary-header container group">
 
       <h1 class="logo">
         <a href="index.html">Styles <br> Conference</a>
@@ -30,16 +29,13 @@
 
     </header>
 
-    <!-- Lead -->
+    <!-- Main content -->
 
     <section class="row-alt">
       <div class="lead container">
 
-        <h1>Venue</h1>
+      <h1>Venue</h1>
 
-        <p>The conference is held at The Chicago Theatre, a beautiful historical landmark. The conference hotel, Hotel Chicago, is a short walk away down State Street.</p>
-
-      </div>
     </section>
 
     <!-- Footer -->
@@ -48,7 +44,7 @@
 
       <small>&copy; Styles Conference</small>
 
-      <nav class="nav">
+      <nav>
         <a href="index.html">Home</a>
         <a href="speakers.html">Speakers</a>
         <a href="schedule.html">Schedule</a>
