--- a/register.html
+++ b/register.html
@@ -5,12 +5,9 @@
     <meta charset="utf-8">
     <title>Register - Styles Conference</title>
     <link rel="stylesheet" href="assets/stylesheets/main.css">
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
   </head>
 
   <body>
-
-    <!-- Header -->
 
     <header class="primary-header container group">
 
@@ -30,16 +27,13 @@
 
     </header>
 
-    <!-- Lead -->
+    <!-- Main content -->
 
     <section class="row-alt">
       <div class="lead container">
 
-        <h1>Register</h1>
+      <h1>Register</h1>
 
-        <p>Every year we aim to have an unbelievable time, and this year we&#8217;d love it for you to join us. Conference passes only cost $99, one of the best values you&#8217;ll find.</p>
-
-      </div>
     </section>
 
     <!-- Footer -->
@@ -48,7 +42,7 @@
 
       <small>&copy; Styles Conference</small>
 
-      <nav class="nav">
+      <nav>
         <a href="index.html">Home</a>
         <a href="speakers.html">Speakers</a>
         <a href="schedule.html">Schedule</a>
