--- a/register.html
+++ b/register.html
@@ -33,7 +33,7 @@
       <div class="lead container">
 
       <h1>Register</h1>
-
+      <p>Every year we aim to have an unbelievable time, and this year we'd love it for you to join us. Confernce passes only cost $99, one of the best values you'll find.</p>  
     </section>
 
     <!-- Footer -->
