--- a/schedule.html
+++ b/schedule.html
@@ -35,7 +35,7 @@
       <div class="lead container">
 
       <h1>Schedule</h1>
-
+      <p>The confernce opens with amazing workshops and continues with two days of incredible talks and keynotes, all of which are facilitated by industry-leading experts.</p>  
     </section>
 
     <!-- Footer -->
