--- a/venue.html
+++ b/venue.html
@@ -35,7 +35,7 @@
       <div class="lead container">
 
       <h1>Venue</h1>
-
+      <p>The conference is held at The Chicago Theatre, a beautiful historical landmark. The conference hotel, Hotel Chicago, is a short walk away down State Street.</p>  
     </section>
 
     <!-- Footer -->
