--- a/schedule.html
+++ b/schedule.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8">
     <title>Schedule - Styles Conference</title>
     <link rel="stylesheet" href="assets/stylesheets/main.css">
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
   </head>
 
   <body>
@@ -21,27 +20,22 @@
       <h3 class="tagline">August 24&ndash;26th &mdash; Chicago, IL</h3>
 
       <nav class="nav primary-nav">
-        <ul>
-          <li><a href="index.html">Home</a></li><!--
-          --><li><a href="speakers.html">Speakers</a></li><!--
-          --><li><a href="schedule.html">Schedule</a></li><!--
-          --><li><a href="venue.html">Venue</a></li><!--
-          --><li><a href="register.html">Register</a></li>
-        </ul>
+        <a href="index.html">Home</a>
+        <a href="speakers.html">Speakers</a>
+        <a href="schedule.html">Schedule</a>
+        <a href="venue.html">Venue</a>
+        <a href="register.html">Register</a>
       </nav>
 
     </header>
 
-    <!-- Lead -->
+    <!-- Main content -->
 
     <section class="row-alt">
       <div class="lead container">
 
-        <h1>Schedule</h1>
-
-        <p>The conference opens with amazing workshops and continues with two days of incredible talks and keynotes, all of which are facilitated by industry-leading experts.</p>
-
-      </div>
+      <h1>Schedule</h1>
+      <p>The conference opens with amazing workshops and continues with two days of incredible talks and keynotes, all of which are facilitated by industry-leading experts.</p>  
     </section>
 
     <!-- Footer -->
@@ -50,14 +44,12 @@
 
       <small>&copy; Styles Conference</small>
 
-      <nav class="nav">
-        <ul>
-          <li><a href="index.html">Home</a></li><!--
-          --><li><a href="speakers.html">Speakers</a></li><!--
-          --><li><a href="schedule.html">Schedule</a></li><!--
-          --><li><a href="venue.html">Venue</a></li><!--
-          --><li><a href="register.html">Register</a></li>
-        </ul>
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="speakers.html">Speakers</a>
+        <a href="schedule.html">Schedule</a>
+        <a href="venue.html">Venue</a>
+        <a href="register.html">Register</a>
       </nav>
 
     </footer>
