--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         <section class="teaser col-1-3">
           <a href="speakers.html">
-            <h5>Speakers</h5>
+            <img src="assets/images/home/speakers.jpg" alt="Professional Speakers">
             <h3>World-Class Speakers</h3>
           </a>
           <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
@@ -62,8 +62,9 @@
         Schedule
 
         --><section class="teaser col-1-3">
-          <a href="schedule.html">
-            <h5>Schedule</h5>
+          <h5>Speakers</h5>
+            <a href="schedule.html"></a>
+            <img src="assets/images/home/schedule.jpg">
             <h3>Three Inspiring Days</h3>
           </a>
           <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times.</p>
