--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 
         <section class="teaser col-1-3">
           <a href="speakers.html">
+            <h5>Speakers</h5>
             <img src="assets/images/home/speakers.jpg" alt="Professional Speakers">
             <h3>World-Class Speakers</h3>
           </a>
@@ -62,7 +63,7 @@
         Schedule
 
         --><section class="teaser col-1-3">
-          <h5>Speakers</h5>
+          <h5>Schedule</h5>
             <a href="schedule.html"></a>
             <img src="assets/images/home/schedule.jpg">
             <h3>Three Inspiring Days</h3>
@@ -75,7 +76,9 @@
         --><section class="teaser col-1-3">
           <a href="venue.html">
             <h5>Venue</h5>
+            <img src="assets/images/home/venue.jpg">
             <h3>The Chicago Theatre</h3>
+            
           </a>
           <p>Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue.</p>
         </section>
