--- a/speakers.html
+++ b/speakers.html
@@ -70,7 +70,7 @@
 
           --><aside class="col-1-3">
             <div class="speaker-info">
-
+              <img src="assets/images/speakers/aaron-irizarry.jpg" alt="Aaron Irizarry">
               <ul>
                 <li><a href="https://twitter.com/aaroni">@aaroni</a></li>
                 <li><a href="http://www.thisisaaronslife.com/">thisisaaronslife.com</a></li>
@@ -102,7 +102,7 @@
 
           --><aside class="col-1-3">
             <div class="speaker-info">
-
+              <img src="assets/images/speakers/adam-connor.jpg" alt="Adam connor">
               <ul>
                 <li><a href="https://twitter.com/adamconnor">@adamconnor</a></li>
                 <li><a href="http://adamconnor.com/">adamconnor.com</a></li>
@@ -132,7 +132,7 @@
 
           --><aside class="col-1-3">
             <div class="speaker-info">
-
+              <img src="assets/images/speakers/aj-self.jpg" alt="Aj self">
               <ul>
                 <li><a href="https://twitter.com/ajself">@ajself</a></li>
                 <li><a href="http://www.ajself.com/">ajself.com</a></li>
